# Ret-Math

./: CMakeLists.txt  LICENSE  README.md
docs/: index.html  script.js  styles.css
include/: RetMath.hpp
include/color/: color.hpp
include/geometry/: aabb.hpp  capsule.hpp  circle.hpp  obb.hpp  plane.hpp  ray.hpp  rect.hpp  sphere.hpp  triangle.hpp
include/matrices/: matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp
include/quaternions/: quaternion.hpp
include/transformations/: transform.hpp
include/utilities/: interpolation.hpp  intersection.hpp  random.hpp
include/vectors/: vector2.hpp  vector3.hpp  vector4.hpp
src/color/: color.cpp
src/geometry/: aabb.cpp  capsule.cpp  circle.cpp  obb.cpp  plane.cpp  ray.cpp  rect.cpp  sphere.cpp  triangle.cpp
src/matrices/: matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp
src/quaternions/: quaternion.cpp
src/transformations/: transform.cpp
src/utilities/: interpolation.cpp  intersection.cpp  random.cpp
src/vectors/: vector2.cpp  vector3.cpp  vector4.cpp
test/: simulation.cpp
